--- a/RecipeManager/MainWindow.xaml
+++ b/RecipeManager/MainWindow.xaml
@@ -1,12 +1,26 @@
-﻿<Window x:Class="RecipeManager.MainWindow"
+﻿<Window x:Class="HelloWPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:RecipeManager"
+        xmlns:local="clr-namespace:HelloWPF"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="12">Hello WPF!</TextBlock>
+        <ScrollViewer HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Stretch" Width="150">
+            <StackPanel x:Name="StackView" Height="Auto" VerticalAlignment="Stretch" Width="100"/>
+        </ScrollViewer>
+        <ListView Name="lvUsers" HorizontalAlignment="Left" Margin="165,10,0,0" VerticalAlignment="Stretch" Width="320">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Navn}" />
+                    <GridViewColumn Header="Category" Width="50" DisplayMemberBinding="{Binding Kategori}" />
+                    <GridViewColumn Header="CreationDate" Width="150" DisplayMemberBinding="{Binding Oprettelses dato}" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+        <Button x:Name="FillOutButton" Content="Indlæs elementer" HorizontalAlignment="Left" Margin="491,276,0,0" VerticalAlignment="Top" Width="75" Click="FillOutButton_Click"/>
+
     </Grid>
 </Window>
