--- a/RecipeManager/MainWindow.xaml
+++ b/RecipeManager/MainWindow.xaml
@@ -13,7 +13,7 @@
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="_File">
                 <MenuItem Header="_Ny">
-                    <MenuItem Header="_Opskrift"/>
+                    <MenuItem Header="_Opskrift" Click="OpenCreateRecipe"/>
                     <MenuItem Header="_Kategori"/>
                     <MenuItem Header="_Råvare"/>
                 </MenuItem>
