--- a/RecipeManager/MainWindow.xaml
+++ b/RecipeManager/MainWindow.xaml
@@ -14,7 +14,7 @@
             <MenuItem Header="_File">
                 <MenuItem Header="_Ny">
                     <MenuItem Header="_Opskrift" Click="OpenCreateRecipe"/>
-                    <MenuItem Header="_Kategori"/>
+                    <MenuItem Header="_Kategori" Click="TestDB"/>
                     <MenuItem Header="_Råvare"/>
                 </MenuItem>
                 <MenuItem Header="_Luk"/>
