--- a/RecipeManager/Views/CreateRecipe.xaml
+++ b/RecipeManager/Views/CreateRecipe.xaml
@@ -53,11 +53,11 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
-                        <TextBlock Grid.Column="0" Text="{Binding Value}"></TextBlock>
-                        <TextBlock Grid.Column="1" Text="{Binding Unit}"></TextBlock>
-                        <TextBlock Grid.Column="2" Text="{Binding ComodityName}"></TextBlock>
-                        <Button Grid.Column="3" Click="RemoveComodity_Click" Tag="{Binding Id}">Fjern</Button>
-                        <Button Grid.Column="4" Click="EditComodity_Click" Tag="{Binding Id}">Ændre</Button>
+                        <TextBlock Grid.Column="0" Text="{Binding Value}" Margin="5,0,5,0"></TextBlock>
+						<TextBlock Grid.Column="1" Text="{Binding Unit}" Margin="5,0,5,0"></TextBlock>
+						<TextBlock Grid.Column="2" Text="{Binding ComodityName}" Margin="5,0,5,0"></TextBlock>
+						<Button Grid.Column="3" Click="RemoveComodity_Click" Tag="{Binding Id}" Margin="5,0,5,0">Fjern</Button>
+						<Button Grid.Column="4" Click="EditComodity_Click" Tag="{Binding Id}" Margin="5,0,5,0">Ændre</Button>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
