--- a/RecipeManager/Views/CreateRecipeCategory.xaml
+++ b/RecipeManager/Views/CreateRecipeCategory.xaml
@@ -6,7 +6,31 @@
         xmlns:local="clr-namespace:RecipeManager.Views"
         mc:Ignorable="d"
         Title="Opret kategori" Height="450" Width="450">
-    <Grid>
+    <Grid Margin="10">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Column="0" Grid.Row="0">Kategori navn</Label>
+        <TextBox x:Name="RecipeCategoryTextBox" Grid.Column="1" Grid.Row="0"></TextBox>
+        <Button Grid.Row="1" Grid.ColumnSpan="2" Margin="5,5,5,5" Click="SaveRecipeCategory">Gem Kateogri</Button>
+        <Label Grid.Column="0" Grid.Row="2">Kategorier</Label>
+        <ListBox x:Name="ListBoxRecipeCategories" Grid.Column="2" Grid.Row="2">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <Grid Margin="0,2">
+                        <TextBlock Text="{Binding Name}"></TextBlock>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+
+
         
     </Grid>
 </Window>
