--- a/RecipeManager/Views/Scrape.xaml
+++ b/RecipeManager/Views/Scrape.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RecipeManager.Views"
+        xmlns:models="clr-namespace:RecipeManager.Models"
         mc:Ignorable="d"
         Title="Opret opskrift" Height="450" Width="450">
     <Grid Margin="10">
@@ -36,5 +37,36 @@
         <Button x:Name="GetRecipeButton" Grid.Row="3" Grid.ColumnSpan="2" Margin="0,5,0,0" Click="Get">Hent opskrift</Button>
         <!-- The verification step of the procedure -->
         <TextBlock Name="NotificationTextBlock" TextWrapping="WrapWithOverflow" Grid.Row="4" Grid.ColumnSpan="2"></TextBlock>
+        <Grid Grid.Row="5" Grid.ColumnSpan="2" Margin="10" HorizontalAlignment="Center">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/> 
+                <RowDefinition Height="Auto"/> 
+                <RowDefinition Height="Auto"/> 
+            </Grid.RowDefinitions>
+            <TextBlock TextWrapping="WrapWithOverflow" Grid.Row="0" Grid.ColumnSpan="3">Vi kunne ikke bestemme de følgende ingredienser, bekræft dem venligst</TextBlock>
+            <TextBlock x:Name="AmountGuess" Grid.Row="1" Grid.Column="0"></TextBlock>
+            <TextBlock x:Name="UnitGuess" Grid.Row="1" Grid.Column="1"></TextBlock>
+            <TextBlock x:Name="NameGuess" Grid.Row="1" Grid.Column="2"></TextBlock>
+            
+            <TextBox x:Name="ValueConfirmed" Grid.Row="2" Grid.Column="0"></TextBox>
+            <ComboBox x:Name="ComboBoxUnit" Grid.Row="2" Grid.Column="1" Margin="2,0,2,0"
+                      ItemsSource="{Binding Source={local:EnumBindingSource {x:Type models:Units}}}"/>
+            <ComboBox x:Name="CommodityName" Grid.Row="2" Grid.Column="2" Margin="2,0,2,0" IsEditable="True">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding Name}"></TextBlock>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+
+            <Button Grid.Row="3" Grid.ColumnSpan="3" Margin="0,5,0,0" Click="ConfirmRecipe">Bekræft</Button>
+        </Grid>
+
     </Grid>
 </Window>
