--- a/RecipeManager/Views/CreateRecipe.xaml
+++ b/RecipeManager/Views/CreateRecipe.xaml
@@ -7,7 +7,7 @@
         xmlns:models="clr-namespace:RecipeManager.Models"
         mc:Ignorable="d"
         ResizeMode="NoResize"
-        Title="Opret opskrift" Height="450" Width="450">
+        Title="Opret opskrift" Height="450" Width="650">
     <Grid Margin="10">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
@@ -48,7 +48,7 @@
             <ComboBox x:Name="CommodityName" Grid.Row="0" Grid.Column="2" Margin="2,0,2,0" IsEditable="True">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding Name}"></TextBlock>
+                        <TextBlock Text="{Binding}"></TextBlock>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
