--- a/RecipeManager/Views/CreateRecipeModeDialog.xaml
+++ b/RecipeManager/Views/CreateRecipeModeDialog.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         SizeToContent="WidthAndHeight" WindowStartupLocation="CenterOwner"
         ResizeMode="NoResize"
-        Title="CreateRecipeModeDialog">
+        Title="CreateRecipeModeDialog"
+        Name="RecipeManager" Icon="Icons/window-icon.png">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" />
